fix spacing, ident and quotation

--- a/src/components/Footer/styles.css
+++ b/src/components/Footer/styles.css
@@ -1,28 +1,27 @@
 .footer {
-    bottom: 0;
-    position: relative;
-    width: 100%;
-    height: 120px;
-    background-color: #fff;
-    color: #000;
- 
+  bottom: 0;
+  position: relative;
+  width: 100%;
+  height: 120px;
+  background-color: #fff;
+  color: #000;
 }
-.consultorio{
-    color:#913A66;
-    float: left;
-    padding: 20px 20px 20px 20px;
-    margin: 20px 20px 20px 20px;
+.consultorio {
+  color: #913a66;
+  float: left;
+  padding: 20px 20px 20px 20px;
+  margin: 20px 20px 20px 20px;
 }
-.endereco{
-    align-self: center;
-    position: relative;
-    padding: 20px 20px 20px 20px;
-    margin: 20px 20px 20px 20px;
+.endereco {
+  align-self: center;
+  position: relative;
+  padding: 20px 20px 20px 20px;
+  margin: 20px 20px 20px 20px;
 }
 
-.footer__social{
-    padding: 20px 20px 20px 20px;
-    float: right;
-    position: relative;
-    margin: 20px 20px 20px 20px;
+.footer__social {
+  padding: 20px 20px 20px 20px;
+  float: right;
+  position: relative;
+  margin: 20px 20px 20px 20px;
 }
